# axum_sea-orm_example

./: .env  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: cake.rs  mod.rs  posts.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220819_220330_create_cake.rs  m20220820_000001_alter_post_table.rs  m20220902_151527_create_user_table.rs  m20220902_153021_seeding_user_table_data.rs
src/: main.rs  post_service.rs
