[package]
name = "sea-orm-axum-example"
version = "0.1.0"
authors = ["leizhao <oizhaolei@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
tokio = { version = "1.18.1", features = ["full"] }
axum = { version = "0.5.15", features = ["headers"] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["fs"] }
anyhow = "1.0.57"
headers = "0.3"
tracing = "0.1"
jsonwebtoken = "8.0"
dotenv = "0.15.0"
serde = "1.0.137"
serde_json = "1.0.81"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
entity = { path = "entity" }
migration = { path = "migration" }
hyper = { version = "0.14", features = ["full"] }
mime = "0.3"
ring = "0.16.20"
base64="0.13.0"
lazy_static = "1.4.0"

[dependencies.sea-orm]
version = "^0.9.1" # sea-orm version
features = [
  "debug-print",
  "runtime-tokio-native-tls",
  # "sqlx-postgres",
  # "sqlx-mysql",
  "sqlx-sqlite",
]
